--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ input[type="text"] {
 input[type="text"]:focus {
   box-shadow: var(--md-elevation3);
   transform: scale(1.01);
+  background-color: #1A1A1A;
 }
 
 button {
@@ -77,7 +78,7 @@ button:hover {
   margin: 0 auto;
   padding: 10px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(380px, 1fr));
   gap: 24px;
 }
 
@@ -123,4 +124,5 @@ button:hover {
   color: #B0B0B0;
   word-break: break-all;
 }
+
 
