--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
         :root {
             --md-background: #121212;
             --md-surface: #1E1E1E;
-            --md-primary: #BB86FC;
+            --md-primary: #e0e0e0;
             --md-on-primary: #121212;
             --md-on-surface: #E0E0E0;
             --md-secondary: #03DAC6;
